--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stackly</title>
     <meta name="description" content="Plataforma que reúne varias herramientas como librerías, ui, iconos y fuentes para desarrolladores. Accede rápido a recursos esenciales para construir proyectos modernos y eficientes.">
-    </head>
+    <link rel="preload" href="/fonts/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin />
+  </head>
 
   <body>
     <div id="root"></div>
